--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <h1>AngularPics</h1>
 
-<pic-photo url="http://marcelotoledo.com/wp-content/uploads/2016/04/teste-ab-checklist.jpg" alt="Teste"></pic-photo>
-<pic-photo url="https://www.aquitemplacas.com.br/img/produtos/g/36-atencao-area-de-teste.jpg" alt="Teste"></pic-photo>
+<pic-photo *ngFor="let photo of photos" [url]="photo.url" [alt]="photo.description"></pic-photo>
