--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -1,1 +1,1 @@
-<pic-photo *ngFor="let photo of photos" [url]="photo.url" [alt]="photo.description"></pic-photo>
+<pic-photo-grid [photos]="photos"></pic-photo-grid>
