--- a/src/app/photos/photo/photo.component.html
+++ b/src/app/photos/photo/photo.component.html
@@ -1,1 +1,4 @@
-<img class="img-thumbnail" [src]="url" [alt]="alt" />
+<div class="text-center">
+  <img class="img-thumbnail" [src]="url" [alt]="alt" />
+  <small>{{ alt }}</small>
+</div>
