--- a/src/app/photos/photo-list/photo-grid/photo-grid.component.html
+++ b/src/app/photos/photo-list/photo-grid/photo-grid.component.html
@@ -2,7 +2,7 @@
   No photos were found.
 </p>
 <ol class="list-unstyled">
-  <li *ngFor="let cols of rows" class="row">
+  <li *ngFor="let cols of rows" class="row no-gutters">
     <div *ngFor="let photo of cols" class="col-4">
       <pic-photo [url]="photo.url" [alt]="photo.description"></pic-photo>
     </div>
