--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -1,5 +1,6 @@
 <div class="text-center mt-3 mb-3">
   <form>
+    <i class="fas fa-search mr-2"></i>
     <input
       type="search"
       class="rounded w-75"
