created search component

--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -1,15 +1,5 @@
-<div class="text-center mt-3 mb-3">
-  <form>
-    <i class="fas fa-search mr-2"></i>
-    <input
-      type="search"
-      class="rounded w-75"
-      placeholder="Type to search..."
-      autofocus
-      (keyup)="debounce.next($event.target.value)"
-    />
-  </form>
-</div>
+<pic-search (onTyping)="filter = $event" [value]="filter"></pic-search>
+
 <pic-photo-grid [photos]="photos | filterByDescription: filter"></pic-photo-grid>
 
 <pic-load-button (click)="loadPhotos()" [hasData]="shouldLoadMore"></pic-load-button>
