--- a/src/app/home/login/login.page.component.html
+++ b/src/app/home/login/login.page.component.html
@@ -1,11 +1,17 @@
-<form class="form mt-4">
+<form class="form mt-4" [formGroup]="loginForm">
   <div class="form-group">
-    <input type="text" class="form-control" placeholder="user name" autofocus />
+    <input type="text" class="form-control" placeholder="user name" autofocus formControlName="userName" />
+    <small class="text-danger d-block mt-2" *ngIf="loginForm.get('userName').errors?.required"
+      >User Name is required!</small
+    >
   </div>
   <div class="form-group">
-    <input type="password" class="form-control" placeholder="password" />
+    <input type="password" class="form-control" placeholder="password" formControlName="password" />
+    <small class="text-danger d-block mt-2" *ngIf="loginForm.get('password').errors?.required">
+      Password is required!
+    </small>
   </div>
-  <button type="submit" class="btn btn-primary btn-block">Login</button>
+  <button type="submit" class="btn btn-primary btn-block" [disabled]="loginForm.invalid">Login</button>
 </form>
 
 <p>Not a user? <a>Register now</a></p>
