--- a/src/app/home/login/login.page.component.html
+++ b/src/app/home/login/login.page.component.html
@@ -1,16 +1,16 @@
-<form class="form mt-4" [formGroup]="loginForm">
+<form class="form mt-4" [formGroup]="loginForm" (submit)="login()">
   <div class="form-group">
     <input type="text" class="form-control" placeholder="user name" autofocus formControlName="userName" />
     <pic-validation-message
       text="User Name is required!"
-      *ngIf="loginForm.get('userName').errors?.required"
+      *ngIf="!!loginForm.get('userName').errors?.required"
     ></pic-validation-message>
   </div>
   <div class="form-group">
     <input type="password" class="form-control" placeholder="password" formControlName="password" />
     <pic-validation-message
       text="Password is required!"
-      *ngIf="loginForm.get('password').errors?.required"
+      *ngIf="!!loginForm.get('password').errors?.required"
     ></pic-validation-message>
   </div>
   <button type="submit" class="btn btn-primary btn-block" [disabled]="loginForm.invalid">Login</button>
