working wth auth user login working, the next step is going to be showing the username in the screen

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
-<h1>AngularPics</h1>
-
-<nav class="nav nav-pills">
+<pic-header></pic-header>
+<nav class="nav nav-pills ml-3">
   <a class="nav-item nav-link" routerLink="/photos/johndoe" routerLinkActive="active">Photos</a>
 </nav>
 
