adicionado tratamento para exibir dado decodificado na aplicacao

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -3,7 +3,7 @@
     <a class="navbar-brand">Angular Pics</a>
     <div>
       <i class="fa fa-user-circle fa-lg mr-2"></i>
-      <a>username</a>
+      <a class="ml-2">{{ user?.name }}</a>
     </div>
   </nav>
 </header>
