wip: creating singup page

--- a/src/app/home/login/login.page.component.html
+++ b/src/app/home/login/login.page.component.html
@@ -23,4 +23,4 @@
   <button type="submit" class="btn btn-primary btn-block" [disabled]="loginForm.invalid">Login</button>
 </form>
 
-<p>Not a user? <a>Register now</a></p>
+<p>Not a user? <a [routerLink]="['register']">Register now</a></p>
