working with form validations (also, creating custom validator)

--- a/src/app/home/signup/signup.page.component.html
+++ b/src/app/home/signup/signup.page.component.html
@@ -1,23 +1,51 @@
 <h4 class="text-center">Register to be part of a new world!</h4>
 
-<form class="form mt-4">
+<form [formGroup]="signUpForm" class="form mt-4">
   <div class="form-group">
-    <input placeholder="E-mail" class="form-control" autofocus />
+    <input formControlName="email" placeholder="E-mail" class="form-control" autofocus />
+    <pic-validation-message *ngIf="signUpForm.get('email').errors?.required" text="Email is required!">
+    </pic-validation-message>
+    <pic-validation-message *ngIf="signUpForm.get('email').errors?.email" text="Invalid e-mail">
+    </pic-validation-message>
   </div>
 
   <div class="form-group">
-    <input placeholder="Full Name" class="form-control" />
+    <input formControlName="fullName" placeholder="Full Name" class="form-control" />
+    <pic-validation-message *ngIf="signUpForm.get('fullName').errors?.required" text="Full Name is required!">
+    </pic-validation-message>
+    <pic-validation-message *ngIf="signUpForm.get('fullName').errors?.minlength" text="Minimum length is 10 chars">
+    </pic-validation-message>
+    <pic-validation-message
+      *ngIf="signUpForm.get('fullName').errors?.customMultipleWords"
+      text="It must have more than one word"
+    >
+    </pic-validation-message>
   </div>
 
   <div class="form-group">
-    <input placeholder="User Name" class="form-control" />
+    <input formControlName="userName" placeholder="User Name" class="form-control" />
+    <pic-validation-message *ngIf="signUpForm.get('userName').errors?.required" text="User Name is required!">
+    </pic-validation-message>
+    <pic-validation-message *ngIf="signUpForm.get('userName').errors?.maxlength" text="Maximum length is 20 chars">
+    </pic-validation-message>
+    <pic-validation-message
+      *ngIf="signUpForm.get('userName').errors?.pattern"
+      text="It must start with lowercase alphabetic char"
+    >
+    </pic-validation-message>
   </div>
 
   <div class="form-group">
-    <input type="password" placeholder="Password" class="form-control" />
+    <input formControlName="password" type="password" placeholder="Password" class="form-control" />
+    <pic-validation-message *ngIf="signUpForm.get('password').errors?.required" text="Password is required!">
+    </pic-validation-message>
+    <pic-validation-message *ngIf="signUpForm.get('password').errors?.minlength" text="Minimum length is 6 chars">
+    </pic-validation-message>
+    <pic-validation-message *ngIf="signUpForm.get('password').errors?.maxlength" text="Maximum length is 20 chars">
+    </pic-validation-message>
   </div>
 
   <button class="btn btn-primary btn-block">Register</button>
 
-  <p>Already a user?<a [routerLink]="['']">Sign In!</a></p>
+  <p>Already a user? <a [routerLink]="['']">Sign In!</a></p>
 </form>
