--- a/src/app/home/signup/signup.page.component.html
+++ b/src/app/home/signup/signup.page.component.html
@@ -1,6 +1,6 @@
 <h4 class="text-center">Register to be part of a new world!</h4>
 
-<form [formGroup]="signUpForm" class="form mt-4">
+<form [formGroup]="signUpForm" class="form mt-4" (submit)="signup()">
   <div class="form-group">
     <input formControlName="email" placeholder="E-mail" class="form-control" autofocus />
     <pic-validation-message *ngIf="signUpForm.get('email').errors?.required" text="Email is required!">
@@ -33,6 +33,9 @@
       text="It must start with lowercase alphabetic char"
     >
     </pic-validation-message>
+    <pic-validation-message *ngIf="signUpForm.get('userName').errors?.userNameTaken" text="Username already taken">
+    </pic-validation-message>
+    <small *ngIf="signUpForm.get('userName').valid" class="text-success">User Available</small>
   </div>
 
   <div class="form-group">
@@ -45,7 +48,7 @@
     </pic-validation-message>
   </div>
 
-  <button class="btn btn-primary btn-block">Register</button>
+  <button [disabled]="signUpForm.invalid || signUpForm.pending" class="btn btn-primary btn-block">Register</button>
 
   <p>Already a user? <a [routerLink]="['']">Sign In!</a></p>
 </form>
