--- a/src/app/photos/photo-list/photo-grid/photo-grid.component.html
+++ b/src/app/photos/photo-list/photo-grid/photo-grid.component.html
@@ -4,14 +4,16 @@
 <ol class="list-unstyled">
   <li *ngFor="let cols of rows" class="row no-gutters">
     <div *ngFor="let photo of cols" class="col-4" picHighlightOnHover>
-      <pic-card [title]="photo.description">
-        <pic-photo
-          [url]="photo.url"
-          [alt]="photo.description"
-          [likes]="photo.likes"
-          [comments]="photo.comments"
-        ></pic-photo>
-      </pic-card>
+      <a [routerLink]="['/p', photo.id]">
+        <pic-card [title]="photo.description">
+          <pic-photo
+            [url]="photo.url"
+            [alt]="photo.description"
+            [likes]="photo.likes"
+            [comments]="photo.comments"
+          ></pic-photo>
+        </pic-card>
+      </a>
     </div>
   </li>
 </ol>
