--- a/src/app/photos/photo-detail/photo-detail.component.html
+++ b/src/app/photos/photo-detail/photo-detail.component.html
@@ -8,10 +8,11 @@
       <small>
         <p class="text-left break-word">{{ photo.description }}</p>
         <div class="text-left mb-4">
-          <i (click)="remove()" class="far fa-comment fa-2x mr-2 ml-2"></i>
+          <i class="far fa-comment fa-2x mr-2 ml-2"></i>
           {{ photo.comments }}
           <i
             photoOwnerOnly
+            (click)="remove()"
             [ownedPhoto]="photo"
             class="far fa-trash-alt fa-2x float-right"
           ></i>
