--- a/src/app/photos/photo-form/photo-form.component.html
+++ b/src/app/photos/photo-form/photo-form.component.html
@@ -50,15 +50,20 @@
         </label>
       </div>
 
-      <button
-        [disabled]="photoForm.invalid"
-        type="submit"
-        class="btn btn-primary btn-block"
-      >
-        Upload
-      </button>
+      <div *ngIf="!percentDone; else progress">
+        <button
+          [disabled]="photoForm.invalid"
+          type="submit"
+          class="btn btn-primary btn-block"
+        >
+          Upload
+        </button>
 
-      <a class="btn btn-secondary btn-block">Cancel</a>
+        <a [routerLink]="['']" class="btn btn-secondary btn-block">Cancel</a>
+      </div>
+      <ng-template #progress>
+        <div class="text-center display-4">Uploading {{ percentDone }}%</div>
+      </ng-template>
     </div>
   </form>
 </div>
