intercepting request to enable/disable loader

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -14,6 +14,7 @@
     </ng-template>
   </nav>
   <div class="fixed-top">
+    <pic-loader></pic-loader>
     <pic-alert></pic-alert>
   </div>
 </header>
